@@ -1,5 +1,5 @@
 import React, {Component} from 'react';
-import {Text, View, Image, StyleSheet} from 'react-native';
+import {Text, View, Image, StyleSheet, TouchableHighlight} from 'react-native';
 import colors from '../styles/color';
 import RoundedButton from '../components/buttons/RoundedButton';
 import Icon from 'react-native-vector-icons/FontAwesome';
@@ -19,6 +19,35 @@ export default class LoggedOut extends Component {
               <Icon name="facebook" size={20} style={styles.facebookIcon} />
             }
           />
+          <RoundedButton text="Create Account" textColor={colors.white} />
+          <TouchableHighlight
+            style={styles.moreOptionsButton}
+            onPress={this.onMoreOptionsPress}>
+            <Text style={styles.moreOptionsButtonText}>More options</Text>
+          </TouchableHighlight>
+          <View style={styles.termsAndConditions}>
+            <Text style={styles.termsText}>
+              By tapping Continue, Create Account or More
+            </Text>
+            <Text style={styles.termsText}>{'options, '}</Text>
+            <Text style={styles.termsText}>{"I agree to Airbnb's "}</Text>
+            <TouchableHighlight style={styles.linkButton}>
+              <Text style={styles.termsText}>Terms of Service</Text>
+            </TouchableHighlight>
+            <Text style={styles.termsText}>,</Text>
+            <TouchableHighlight style={styles.linkButton}>
+              <Text style={styles.termsText}>Payments Terms of Service</Text>
+            </TouchableHighlight>
+            <Text style={styles.termsText}>,</Text>
+            <TouchableHighlight style={styles.linkButton}>
+              <Text style={styles.termsText}>Privacy Policy</Text>
+            </TouchableHighlight>
+            <Text style={styles.termsText}>, and</Text>
+            <TouchableHighlight style={styles.linkButton}>
+              <Text style={styles.termsText}>Nondiscrimination Policy</Text>
+            </TouchableHighlight>
+            <Text style={styles.termsText}></Text>
+          </View>
         </View>
       </View>
     );
@@ -54,5 +83,27 @@ const styles = StyleSheet.create({
     position: 'relative',
     left: 20,
     zIndex: 8,
+  },
+  moreOPtionsButton: {
+    marginTop: 10,
+  },
+  moreOptionsButtonText: {
+    color: colors.white,
+    fontSize: 16,
+  },
+  termsAndConditions: {
+    flexWrap: 'wrap',
+    alignItems: 'flex-start',
+    flexDirection: 'row',
+    marginTop: 30,
+  },
+  termsText: {
+    color: colors.white,
+    fontSize: 16,
+    fontWeight: '600',
+  },
+  linkButton: {
+    borderBottomWidth: 1,
+    borderBottomColor: colors.white,
   },
 });
